# miso-blockout

./: CHANGELOG.md  Makefile  README.md  cabal.project  flake.nix  miso-blockout.cabal
.github/workflows/: main.yml
app/: Main.hs
app/Blockout/: Persist.hs  Pieces.hs  Types.hs  Update.hs  View.hs
static/: index.html  index.js
